--- a/templates/login.html
+++ b/templates/login.html
@@ -4,7 +4,7 @@
 <title>IntelliTech</title>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<link rel="stylesheet" href="style.css">
+<link rel="stylesheet" href="{{ url_for('static', filename='CSS/style.css') }}"> 
 <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato">
 <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -51,11 +51,11 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Lato", sans-serif}
         <form action="/login" method="POST">
             <h1>Login</h1>
             <div class="input-box">
-            <input type="text" placeholder="Username" required>
+            <input type="text" name="email" placeholder="Email" required>
             <i class='bx bxs-user'></i>
             </div>
             <div class="input-box">
-            <input type="password" placeholder="Password" required>
+            <input type="password" name="password" placeholder="Password" required>
             <i class='bx bxs-lock-alt'></i>
             </div>
             <div class="remember-forgot">
