--- a/templates/productpage.html
+++ b/templates/productpage.html
@@ -4,7 +4,7 @@
 <title>IntelliTech</title>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<link rel="stylesheet" href="style.css">
+<link rel="stylesheet" href="{{ url_for('static', filename='CSS/style.css') }}">
 <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato">
 <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -50,58 +50,58 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Lato", sans-serif}
     <div class="product-blocks">
       <!-- Each bubble contains a product and its information -->
       <div class="bubble">
-          <img src="product1.jpg" alt="Product 1">
+          <img src="{{ url_for('static', filename='Images/product1.jpg') }}" alt="Product 1">
           <h3>Life.AI</h3>
           <p><button>£79.99</button></p>
           <p>Likes <span class="clickCount">0</span></p>
-          <button class="clickButton"><img src="thumbsup.png" style="width: 2vw; height: 4vh;"></button>
+          <button class="clickButton"><img src="{{ url_for('static', filename='Images/thumbsup.png') }}" style="width: 2vw; height: 4vh;"></button>
           <p>Dislikes <span class="clickCount">0</span></p>
-          <button class="clickButton"><img src="thumbsdown.png" style="width: 2vw; height: 4vh;"></button>
+          <button class="clickButton"><img src="{{ url_for('static', filename='Images/thumbsdown.png') }}" style="width: 2vw; height: 4vh;"></button>
       </div>
       <div class="bubble">
-          <img src="product2.jpg" alt="Product 2">
+          <img src="{{ url_for('static', filename='Images/product2.jpg') }}" alt="Product 2">
           <h3>Google.AI</h3>
           <p><button>£99.99</button></p>
           <p>Likes <span class="clickCount">0</span></p>
-          <button class="clickButton"><img src="thumbsup.png" style="width: 2vw; height: 4vh;"></button>
+          <button class="clickButton"><img src="{{ url_for('static', filename='Images/thumbsup.png') }}" style="width: 2vw; height: 4vh;"></button>
           <p>Dislikes <span class="clickCount">0</span></p>
-          <button class="clickButton"><img src="thumbsdown.png" style="width: 2vw; height: 4vh;"></button>
+          <button class="clickButton"><img src="{{ url_for('static', filename='Images/thumbsdown.png') }}" style="width: 2vw; height: 4vh;"></button>
       </div>
       <div class="bubble">
-          <img src="product3.jpg" alt="Product 3">
+          <img src="{{ url_for('static', filename='Images/product3.jpg') }}" alt="Product 3">
           <h3>RobotAI</h3>
           <p><button>£129.99</button></p>
           <p>Likes <span class="clickCount">0</span></p>
-          <button class="clickButton"><img src="thumbsup.png" style="width: 2vw; height: 4vh;"></button>
+          <button class="clickButton"><img src="{{ url_for('static', filename='Images/thumbsup.png') }}" style="width: 2vw; height: 4vh;"></button>
           <p>Dislikes <span class="clickCount">0</span></p>
-          <button class="clickButton"><img src="thumbsdown.png" style="width: 2vw; height: 4vh;"></button>
+          <button class="clickButton"><img src="{{ url_for('static', filename='Images/thumbsdown.png') }}" style="width: 2vw; height: 4vh;"></button>
       </div>
       <div class="bubble">
-          <img src="product4.png" alt="Product 4">
+          <img src="{{ url_for('static', filename='Images/product4.png') }}" alt="Product 4">
             <h3>ChatGPT</h3>
             <p><button>£59.99</button></p>
             <p>Likes <span class="clickCount">0</span></p>
-            <button class="clickButton"><img src="thumbsup.png" style="width: 2vw; height: 4vh;"></button>
+            <button class="clickButton"><img src="{{ url_for('static', filename='Images/thumbsup.png') }}" style="width: 2vw; height: 4vh;"></button>
             <p>Dislikes <span class="clickCount">0</span></p>
-            <button class="clickButton"><img src="thumbsdown.png" style="width: 2vw; height: 4vh;"></button>
+            <button class="clickButton"><img src="{{ url_for('static', filename='Images/thumbsdown.png') }}" style="width: 2vw; height: 4vh;"></button>
       </div>
       <div class="bubble">
-          <img src="product5.jpg" alt="Product 5">
+          <img src="{{ url_for('static', filename='Images/product5.jpg') }}" alt="Product 5">
           <h3>Security AI Tool</h3>
           <p><button>£79.99</button></p>
           <p>Likes <span class="clickCount">0</span></p>
-          <button class="clickButton"><img src="thumbsup.png" style="width: 2vw; height: 4vh;"></button>
+          <button class="clickButton"><img src="{{ url_for('static', filename='Images/thumbsup.png') }}" style="width: 2vw; height: 4vh;"></button>
           <p>Dislikes <span class="clickCount">0</span></p>
-          <button class="clickButton"><img src="thumbsdown.png" style="width: 2vw; height: 4vh;"></button>
+          <button class="clickButton"><img src="{{ url_for('static', filename='Images/thumbsdown.png') }}" style="width: 2vw; height: 4vh;"></button>
       </div>
       <div class="bubble">
-          <img src="product6.jpg" alt="Product 6">
+          <img src="{{ url_for('static', filename='Images/product6.jpg') }}" alt="Product 6">
           <h3>Networking AI</h3>
           <p><button>£99.99</button></p>
           <p>Likes <span class="clickCount">0</span></p>
-          <button class="clickButton"><img src="thumbsup.png" style="width: 2vw; height: 4vh;"></button>
+          <button class="clickButton"><img src="{{ url_for('static', filename='Images/thumbsup.png') }}" style="width: 2vw; height: 4vh;"></button>
           <p>Dislikes <span class="clickCount">0</span></p>
-          <button class="clickButton"><img src="thumbsdown.png" style="width: 2vw; height: 4vh;"></button>
+          <button class="clickButton"><img src="{{ url_for('static', filename='Images/thumbsdown.png') }}" style="width: 2vw; height: 4vh;"></button>
       </div>
     </div>
   </div>
